ORBI-11: Add overscroll-behavior: none to prevent bounce whitespace

--- a/src/styles/soames/base.css
+++ b/src/styles/soames/base.css
@@ -378,6 +378,7 @@ html,
 body {
   height: auto;
   min-height: 100vh;
+  overscroll-behavior: none;
 }
 
 body {
