--- a/src/styles/soames/components.css
+++ b/src/styles/soames/components.css
@@ -1527,6 +1527,7 @@ main {
   overflow-x: hidden;
   overflow-y: auto;
   perspective: 2px;
+  overscroll-behavior: none;
 }
 
 .soames-parallax {
